--- a/eclipse-workspace/SurveyForm/src/main/resources/templates/index.html
+++ b/eclipse-workspace/SurveyForm/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 			</div>
 			<div>
 				<h3>
-					<a th:href="@{/list_users}">List All Users</a>
+					<a th:href="@{/login_success}">Survey Form</a>
 					<a th:href="@{/register}">Register</a>
 					<a th:href="@{/login}">Login</a>
 				</h3>
