--- a/eclipse-workspace/SurveyForm/src/main/resources/templates/login.html
+++ b/eclipse-workspace/SurveyForm/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@
 			     	 </div>
 				     <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
 				     
-				     	<form name="f" th:action="@{/success_login}" method="post" th:object="${user}">
+				     	<form name="f" th:action="@{/login}" method="post">
 							<p class="signin_heading">Sign In</p>
 							
 							<div th:if="${param.error}" class="alert alert-error">
@@ -87,7 +87,7 @@
 							<div class="text-center text-lg-start mt-4 pt-2">
 								<button type="submit" class="btn btn-primary btn-lg"
 								style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-								
+								<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
 								<!-- Register Button -->
 								<p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a th:href="@{/register}"
 									class="link-danger">Register</a></p>
