--- a/eclipse-workspace/SurveyForm/src/main/resources/templates/login_success.html
+++ b/eclipse-workspace/SurveyForm/src/main/resources/templates/login_success.html
@@ -14,27 +14,50 @@
         .user_container{
             padding-right: 5em;
         }
+        .newservey_container{
+            padding-left: 60%;
+            font-size: 12px;
+        }
+        .generate_survey{
+            background-color: #0700ec;
+            border: 0px solid white;
+            border-radius: 30px;
+            color: white;
+            padding: 10px;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/91ec5d39d3.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <form th:action="@{/logout}" method="post">
+    <!-- Navbar -->
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <span class="navbar-brand mb-0 navbar_logo">survey form</span>
+            <div class="newservey_container">
+                <button type="" class="generate_survey">
+                    <i class="fa fa-plus" aria-hidden="true"></i> Generate Survey
+                </button>
+            </div>
             <div class="d-flex align-items-center username_container">
                 <p class="username">
                     [[${#request.userPrincipal.principal.fullName}]]
-                    <input type="submit" value="sign out" style="
+                    <!-- <input type="submit" value="sign out" style="
                     background-color: white;
                     text-decoration: none;
                     border: 0px solid white;
                     font-family: 'Ubuntu', sans-serif;
                     font-weight: bold;
                     font-size: 18px;
-                    color: #0700ec;">
+                    color: #0700ec;"> -->
                 </p>
+                <button type="submit" style="border: 0px solid white; background-color: white;">
+                    <i class="fa fa-sign-out" style="font-size: 25px;
+                    text-align: center;
+                    display: flex;
+                    align-items: center;"></i>
+                </button>
             </div>
         </div>
     </nav>
