--- a/eclipse-workspace/SurveyForm/src/main/resources/templates/users.html
+++ b/eclipse-workspace/SurveyForm/src/main/resources/templates/users.html
@@ -10,7 +10,7 @@
 			<div>
 				<form th:action="@{/logout}" method="post">
 					<p>
-						Welcome <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+						Welcome <b>[[${#request.userPrincipal.principal.firstName}]]</b>
 					</p>
 					<input type="submit" value="Sign Out">
 				</form>
