--- a/eclipse-workspace/SurveyForm/src/main/resources/templates/login_success.html
+++ b/eclipse-workspace/SurveyForm/src/main/resources/templates/login_success.html
@@ -42,7 +42,7 @@
             </div>
             <div class="d-flex align-items-center username_container">
                 <p class="username">
-                    [[${#request.userPrincipal.principal.fullName}]]
+                    [[${#request.userPrincipal.principal.firstName}]]
                     <!-- <input type="submit" value="sign out" style="
                     background-color: white;
                     text-decoration: none;
