--- a/eclipse-workspace/SurveyForm/src/main/resources/templates/login_success.html
+++ b/eclipse-workspace/SurveyForm/src/main/resources/templates/login_success.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <title>Survey Form</title>
     <style>
+        /* Fonts Import URL from Google fonts*/
         @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap');
         .username{
             margin: 5px;
             padding: 5px;
@@ -25,34 +28,106 @@
             color: white;
             padding: 10px;
         }
+        .container{
+            background-color: #f7f6f4;
+            border: 1px solid black;
+            border-radius: 10px;
+            max-width: 700px;
+            max-height: 100%;
+            padding: 20px;
+            margin: 50px;
+        }
+        .container p{
+            font-size: 25px;
+            font-family: 'Fira Sans', sans-serif;
+        }
+        .header{
+            margin: 30px;
+        }
+
+        .header input{
+            font-family: 'Fira Sans', sans-serif;
+            border: 1px solid #afafaf;
+            border-radius: 5px;
+            height: 40px;
+            font-size: 30px;
+            padding: 15px;
+        }
+        .header textarea{
+            width: 100%;
+            max-height: 60px;
+            font-family: 'Fira Sans', sans-serif;
+            font-size: 20px;
+            padding: 5px;
+        }
+        .option_container input{
+            width: 18%;
+            height: 35px;
+            font-size: 20px;
+            font-family: 'Fira Sans', sans-serif;
+            padding: 10px;
+            margin: 10px;
+            margin-left: 0px;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/91ec5d39d3.js" crossorigin="anonymous"></script>
+    <!-- Javas cript  -->
+    <script type="text/javascript">
+        $(document).ready(function() {
+            var html = '<div class="header"><textarea placeholder="Type your Question" name="question"></textarea><div class="option_container"><input type="text" class="options" placeholder="1. option" name="option"><input type="text" class="options" placeholder="2. option" name="option_1"><input type="text" class="options" placeholder="3. option" name="option_2"><input type="text" class="options" placeholder="4. option" name="option_3"></div></div><button type="button" class="btn btn-primary" name="removef" id="remove" style="margin-left: 30px;">Remove Field</button>';
+            var x = 1;
+
+            $("#add").click(function() {
+                alert('ok')
+            });
+        });
+    </script>
 </head>
 <body>
-<form th:action="@{/logout}" method="post">
-    <!-- Navbar -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 navbar_logo">survey form</span>
-            <div class="newservey_container">
-                <button type="" class="generate_survey">
-                    <i class="fa fa-plus" aria-hidden="true"></i> Generate Survey
-                </button>
+    <form th:action="@{/logout}" method="post">
+        <!-- Navbar -->
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid">
+                <span class="navbar-brand mb-0 navbar_logo">survey form</span>
+                <div class="newservey_container">
+                    <button type="button" class="generate_survey">
+                        <i class="fa fa-plus" aria-hidden="true"></i> Generate Survey
+                    </button>
+                </div>
+                <div class="d-flex align-items-center username_container">
+                    <p class="username">
+                        [[${#request.userPrincipal.principal.firstName}]]
+                    </p>
+                    <button type="submit" style="border: 0px solid white; background-color: white;">
+                        <i class="fa fa-sign-out" style="font-size: 25px;
+                        text-align: center;
+                        display: flex;
+                        align-items: center;"></i>
+                    </button>
+                </div>
             </div>
-            <div class="d-flex align-items-center username_container">
-                <p class="username">
-                    [[${#request.userPrincipal.principal.firstName}]]
-                </p>
-                <button type="submit" style="border: 0px solid white; background-color: white;">
-                    <i class="fa fa-sign-out" style="font-size: 25px;
-                    text-align: center;
-                    display: flex;
-                    align-items: center;"></i>
-                </button>
+        </nav>
+    </form>
+
+    <div class="container">
+        <div class="header">
+            <p>Topic Name</p>
+            <input type="text" placeholder="Type your Topic Name" name="topicName">
+        </div>
+
+        <p style="font-size: 25px; font-family: 'Fira Sans', sans-serif; margin-left: 30px;">Questions</p>
+        <div class="header">
+            <textarea placeholder="Type your Question" name="question"></textarea>
+            <div class="option_container">
+                <input type="text" class="options" placeholder="1. option" name="option">
+                <input type="text" class="options" placeholder="2. option" name="option_1">
+                <input type="text" class="options" placeholder="3. option" name="option_2">
+                <input type="text" class="options" placeholder="4. option" name="option_3">
             </div>
         </div>
-    </nav>
-</form>
+        <button type="button" class="btn btn-primary" name="add" id="add" style="margin-left: 30px;">Add Field</button>
+    </div>
+
 </body>
 </html>
